project/manifests/postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: dwk-project
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-secret
          secret:
            secretName: postgres-secret
      priorityClassName: db
      containers:
      - name: postgres
        image: postgres:13.0
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
          - mountPath: /mnt/pgdata
            name: pgdata
            subPath: pgdata
          - mountPath: /etc/secret/postgres
            name: postgres-secret
            readOnly: true
        resources:
          limits:
            cpu: "200m"
            memory: "512Mi"
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: dwk-project
  name: postgres
spec:
  selector:
    app: postgres
  clusterIP: None
  ports:
  - port: 5432
    targetPort: postgres
