project/manifests/routes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: dwk-project
  name: api-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: dwk-project
  name: frontend-compress
spec:
  compress: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: dwk-project
  name: ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api-service
          port: 80
      middlewares:
        - name: api-stripprefix
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: frontend-svc
          port: 80
      middlewares:
        - name: frontend-compress
